--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h1>Rotem Haber</h1>
-        <img src="/rotem.png">
+        <img src="/Rotem.png">
         <h2>Project 2</h2>
         <p>View</p>
         <p>Git Hub</p>
